css/bootstrap.css
/* Nav Bar
------------------------------- */
body.toolbar .navbar-fixed-top {
  top: 30px;
}

body.toolbar-drawer .navbar-fixed-top {
  top: 65px;
}

/* Sub Nav Bar
------------------------------- */
.subnav {
  width: 100%;
  height: 36px;
  background-color: #eeeeee; /* Old browsers */
  background-repeat: repeat-x; /* Repeat the gradient */
  background-image: -moz-linear-gradient(top, #f5f5f5 0%, #eeeeee 100%); /* FF3.6+ */
  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#f5f5f5), color-stop(100%,#eeeeee)); /* Chrome,Safari4+ */
  background-image: -webkit-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Chrome 10+,Safari 5.1+ */
  background-image: -ms-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* IE10+ */
  background-image: -o-linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* Opera 11.10+ */
  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f5f5f5', endColorstr='#eeeeee',GradientType=0 ); /* IE6-9 */
  background-image: linear-gradient(top, #f5f5f5 0%,#eeeeee 100%); /* W3C */
  border: 1px solid #e5e5e5;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
          border-radius: 4px;
}
.subnav .nav {
  margin-bottom: 0;
}
.subnav .nav > li > a {
  margin: 0;
  padding-top:    11px;
  padding-bottom: 11px;
  border-left: 1px solid #f5f5f5;
  border-right: 1px solid #e5e5e5;
  -webkit-border-radius: 0;
     -moz-border-radius: 0;
          border-radius: 0;
}
.subnav .nav > .active > a,
.subnav .nav > .active > a:hover {
  padding-left: 13px;
  color: #777;
  background-color: #e9e9e9;
  border-right-color: #ddd;
  border-left: 0;
  -webkit-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
     -moz-box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
          box-shadow: inset 0 3px 5px rgba(0,0,0,.05);
}
.subnav .nav > .active > a .caret,
.subnav .nav > .active > a:hover .caret {
  border-top-color: #777;
}
.subnav .nav > li:first-child > a,
.subnav .nav > li:first-child > a:hover {
  border-left: 0;
  padding-left: 12px;
  -webkit-border-radius: 4px 0 0 4px;
     -moz-border-radius: 4px 0 0 4px;
          border-radius: 4px 0 0 4px;
}
.subnav .nav > li:last-child > a {
  border-right: 0;
}
.subnav .dropdown-menu {
  -webkit-border-radius: 0 0 4px 4px;
     -moz-border-radius: 0 0 4px 4px;
          border-radius: 0 0 4px 4px;
}

/* Jumbotrons
------------------------------- */
.jumbotron {
  position: relative;
  margin: 18px 0;
}

.jumbotron h1 {
  margin-bottom: 9px;
  font-size: 81px;
  letter-spacing: -1px;
  line-height: 1;
}

.jumbotron h1 a {
  text-decoration: none;
}

.jumbotron p {
  margin-bottom: 18px;
  font-weight: 300;
}

.jumbotron .btn-large {
  font-size: 20px;
  font-weight: normal;
  padding: 14px 24px;
  margin-right: 10px;
  -webkit-border-radius: 6px;
     -moz-border-radius: 6px;
          border-radius: 6px;
}

.jumbotron .user-links {
  position: absolute;
  top: 9px;
  right: 9px;
}

.jumbotron .user-links .dropdown-menu {
  left: auto;
  right: 0;
}

/* Tabs
------------------------------- */
div.tabs {
  margin-bottom: 18px;
}

div.tabs ul.nav-tabs {
  margin-bottom: 9px;
}

div.tabs ul.nav-pills {
  margin-bottom: 0;
}

/* Alerts
------------------------------- */
.alert ul {
  margin-bottom: 0;
}

/* Inline Links
------------------------------- */
ul.inline,
ul.links.inline {
  display: inline;
  margin-left: 0;
  padding-left: 0;
}

ul.inline li {
  display: inline;
  list-style-type: none;
  padding: 0 0.5em 0 0;
}

/* Forms
------------------------------- */
.form-required {
  color: #B94A48;
}

.form-actions button {
  margin-right: 3px;
}

legend a {
  color: #333333;
}

input,
textarea,
select,
.uneditable-input {
  margin-bottom: 0;
}

.password-strength {
  margin-top: 0;
}

/* Forms (Vertical)
------------------------------- */
.form-type-radios .control-group,
.form-type-checkboxes .control-group {
  margin-bottom: 5px;
}

.form-type-radios .form-type-radio:first-child,
.form-type-checkboxes .form-type-checkbox:first-child {
  padding-top: 5px;
}

.form-type-radios .form-type-radio label.radio,
.form-type-checkboxes .form-type-checkbox label.checkbox {
  padding-top: 0;
}

/* Forms (Horizontal)
------------------------------- */
.form-horizontal .form-radios .controls,
.form-horizontal .form-checkboxes .controls {
  margin-left: 0;
}

.form-horizontal .form-type-radios .control-group,
.form-horizontal .form-type-checkboxes .control-group {
  margin-bottom: 0;
}

.form-horizontal .form-type-radio label.radio,
.form-horizontal .form-type-checkbox label.checkbox {
  float: none;
}

/* Fix Horizontal Forms on Password Confirm Field
------------------------------- */
.form-horizontal .form-type-password-confirm > div.controls {
  margin-left: 0;
}

.form-horizontal .form-type-password-confirm > div.controls > p.help-block {
  margin-left: 160px;
}

.form-horizontal .form-type-password-confirm div.password-parent {
  clear: none;
}

/* Forms in Tables
------------------------------- */
table .control-group {
  margin-bottom: 0;
}

td.checkbox input[type="checkbox"] {
  margin-left: 0;
}

/* Filters
------------------------------- */
.tips {
  font-size: 1em;
}

.filter-guidelines {
  padding: 0;
}

/* Vertical Tabs
------------------------------- */
.vertical-tabs fieldset.vertical-tabs-pane {
  padding: 1em;
}

.vertical-tabs .form-type-textfield input {
  width: 95%;
  -moz-box-sizing: content-box;
  -webkit-box-sizing: content-box;
  box-sizing: content-box;
}

/* Nodes
------------------------------- */
.node {
  margin-bottom: 18px;
}

/* Comments
------------------------------- */
.comment {
  position: relative;
  margin-bottom: 18px;
  padding-bottom: 18px;
  border-bottom: 1px solid #e5e5e5;
}

.comment .permalink,
.comment .submitted,
.comment .submitted .label {
  margin-right: 9px;
}

.comment .user-picture {
  float: left;
  margin-right: 9px;
}

.comment .user-picture img {
  display: block;
  width: 35px;
  height: 35px;
}

/* Fields
------------------------------- */
.field {
  margin-bottom: 9px;
}

/* Profiles
------------------------------- */
.profile {
  margin: 0 0 1em 0;
}

.profile h3 {
  border-bottom: none;
}

/* Footer
------------------------------- */
footer {
  margin-top: 45px;
  padding: 18px 0 36px 0;
  border-top: 1px solid #e5e5e5;
}

footer p {
  margin-bottom: 0;
  color: #555;
}

footer .block {
  margin-bottom: 18px;
}

